Blender Cycles will crash when preview or render #53270

Closed
opened 2017-11-08 20:53:27 +01:00 by Michael Klein · 8 comments

System Information
Alienware 17R1 GTX 880M latest Nvidia driver, Win 10 latest

Blender Version
Broken: 2.79 3f614cd (Daily Build)
Worked: 2.79 5bd8ac9 (Official)

Short description of error
Blender will crash/close without any warning/error.

Exact steps for others to reproduce the error
Load the attached scene and try preview or render.RB0102_Micro_Millennium_Falcon_v06_CRASH.zip

INFO: The scene is using the new Bevel Shader. But deleting the node will not fix this.

**System Information** Alienware 17R1 GTX 880M latest Nvidia driver, Win 10 latest **Blender Version** Broken: 2.79 3f614cd (Daily Build) Worked: 2.79 5bd8ac9 (Official) **Short description of error** Blender will crash/close without any warning/error. **Exact steps for others to reproduce the error** Load the attached scene and try preview or render.[RB0102_Micro_Millennium_Falcon_v06_CRASH.zip](https://archive.blender.org/developer/F1108741/RB0102_Micro_Millennium_Falcon_v06_CRASH.zip) INFO: The scene is using the new Bevel Shader. But deleting the node will not fix this.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Renderbicks

Added subscriber: @Renderbicks

This issue was referenced by blender/cycles@97eee85872

This issue was referenced by blender/cycles@97eee85872741a4aa4eb216b5a876f8621472bde

This issue was referenced by 21a535840d

This issue was referenced by 21a535840df1887245b90376a0de427f2a848806
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Member

Took a few tiles trigger, but, the problem is in closure_alloc where sd->num_closure appear to have an invalid value, which in turn gets you an invalid pointer which gets dereffed and downhill from there.

Took a few tiles trigger, but, the problem is in closure_alloc where sd->num_closure appear to have an invalid value, which in turn gets you an invalid pointer which gets dereffed and downhill from there.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Impressive. Most impressive how fast you wizards fix bugs here. Thanks!

Impressive. Most impressive how fast you wizards fix bugs here. Thanks!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53270
No description provided.